# radcial

./: .gitignore  CMakeLists.txt  Compile.bat  README.md  clean.bat  data.txt  main.c  main.c.back  push.py  radical.layout  testfrac.txt
examples/: eyyc.c  sin-cos.c  xyline.c
gc/: CMakeLists.txt
include/: .radical.h.un~  fraction.h  radical.h  structs.h
include/radical/: fraction.h  radical.h
src/: fraction.c  radical.c
